--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 }
 html{
     font-size: 62.5%;
+    font-family: 'Encode Sans Semi Expanded', sans-serif;
 }
 header{
-    height: 20vh;
+    height: 17vh;
     display: block;
 }
 
@@ -45,3 +46,50 @@ a{
     width: 1.2rem;
     justify-content: center;
 }
+.img-logo{
+    display: flex;
+    width: 100%;
+    background-color: antiquewhite;
+}
+.img-logo img{
+    width: 10rem;
+    margin: 1rem;
+    margin-left: 5rem;
+}
+.img-logo h1{
+    margin-top: 5rem;
+}
+.search-input{
+    margin-left: 10%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search-input .search{
+    width:90%;
+    height:30%;
+    border-radius: 1.5rem;
+    background-color: #fff;
+    box-shadow: 0  1px 6px 0 #20212447;
+    border-color: #dfe1e500;
+}
+.search .input-barra{
+    width: 95%;
+    height: 100%;
+    margin-left: 2rem;
+    border-radius: 1rem;
+    border: 0;
+    border-style: none;
+    outline: none;
+}
+.search-input  .icon-search{
+    width:5%;
+    height:30%;
+    margin-left:2rem;
+    background-image: url("https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
